# BlueSCSI-v2

./: .gitignore  .gitmodules  ArdSCSino.ino  ArdSCSinoV2.ino  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.txt  LICENSE  Performance.md  README.adoc  README.md  azulscsi.ini  bluescsi.ini  build.sh  dist.sh  flake.nix  libminini-config.cmake  platformio.ini  shell.nix  zuluscsi.ini  zuluscsi_timings.ini
.github/workflows/: analyze_crashlogs.yml  firmware_build.yml  main.yml  size_comment.yml
3D-Files/: BlueSCSI-1.0-b.stl  BlueSCSI-1.0-b_V2.stl  README.md
3D-Files/1.0/: README.md
3D-Files/1.1/: BlueSCSI 1.1-a Desktop.stl  BlueSCSI 1.1-a-DB25-Base.stl  README.md
ArdSCSinoV2/: ArdSCSinoV2.ino
blink/: CMakeLists.txt  blink.cpp
boards/: BlueSCSI_RP2040.json  README.md  ZuluSCSI_RP2040.json  bluescsi_wide.json  generic_rp2350.json  rpipico.json  rpipico2.json  rpipico2w.json  rpipicow.json  zuluscsi_blaster.json  zuluscsi_rp2040.json  zuluscsi_rp2350A.json
boards/include/: bluescsi_ultra.h  bluescsi_ultra_wide.h
bridge/: CMakeLists.txt  FreeRTOSConfig.h  main.c
cc-nc-hardware/: README.adoc
cc-nc-hardware/Centronics_50Pin/: Centronics_50Pin.kicad_pcb  Centronics_50Pin.kicad_prl  Centronics_50Pin.kicad_pro  Centronics_50Pin.kicad_sch  LED_Indicators.kicad_sch  fp-info-cache
cc-nc-hardware/DB25_External/: DB25_External.kicad_pcb  DB25_External.kicad_prl  DB25_External.kicad_pro  DB25_External.kicad_sch  LED_Indicators.kicad_sch  LICENSE-FR.adoc  LICENSE-PL.adoc  New_Library.kicad_sym  fp-info-cache
cc-nc-hardware/Desktop_50_Pin/: DataBusTransceivers.kicad_sch  DesktopMountingBracket.stl  Desktop_50_Pin_TopConn.kicad_pcb  Desktop_50_Pin_TopConn.kicad_prl  Desktop_50_Pin_TopConn.kicad_pro  Desktop_50_Pin_TopConn.kicad_sch  LED_Indicators.kicad_sch  New_Library.kicad_sym  README.adoc  SCSI_And_Power.kicad_sch  Termination.kicad_sch  fp-info-cache
cc-nc-hardware/PowerBook/: LED_Indicators.kicad_sch  LICENSE-JP.adoc  LICENSE-ZH-HANS.adoc  LICENSE.adoc  PowerBook.kicad_pcb  (+6 more)
docs/: 1.0b-to-1.0c.adoc  README.md  assembly.md  build-your-own.adoc  troubleshooting-1.0-b.adoc  troubleshooting-1.0-c.adoc
greenpak/: README.md  SCSI_Accelerator_SLG46824.gp6  SCSI_Accelerator_SLG46824.hex
hardware/: README.adoc  bridge_case.FCStd  usb_bridge_case.FCStd
hw/: bluepill_scsi-cache.lib  bluepill_scsi.kicad_pcb  bluepill_scsi.kicad_pcb-bak  bluepill_scsi.net  bluepill_scsi.pro  bluepill_scsi.sch  bluepill_scsi.sch-bak  fp-info-cache
lib/SCSI2SD/software/scsi2sd-util/libzipper-1.0.3/: Compressor.cc  Exception.cc  FileReader.cc  FileWriter.cc  INSTALL.Android  Makefile.am  Makefile.in  NEWS  aclocal.m4  autoconfig.h.in  configure  configure.ac  deflate.cc  doxygen.am  split.hh  util.hh  zip.cc  zipper.cc
lib/SCSI2SD/src/scsi2sd-util6/dfu-util/: .gitignore  AUTHORS  ChangeLog  INSTALL  README  TODO  configure.ac  dfuse-pack.py
lib/SCSI2SD/src/scsi2sd-util6/dfu-util/src/: dfu_load.c  dfu_util.c  dfu_util.h  dfuse.c  main.c  portable.h  usb_dfu.h
lib/SCSI2SD/src/scsi2sd-util6/dfu-util/www/: build.html  dfu-util.1.html  index.html
src/: AzulSCSI.cpp  AzulSCSI_bootloader.cpp  AzulSCSI_config.h  AzulSCSI_disk.cpp  AzulSCSI_disk.h  AzulSCSI_log.cpp  AzulSCSI_log.h  AzulSCSI_log_trace.cpp  AzulSCSI_main.cpp  BlueSCSI.cpp  BlueSCSI.h  BlueSCSI_Toolbox.cpp  BlueSCSI_Toolbox.h  BlueSCSI_audio.h  BlueSCSI_audio_math.h  BlueSCSI_blink.cpp  BlueSCSI_blink.h  BlueSCSI_bootloader.cpp  BlueSCSI_cdrom.cpp  BlueSCSI_cdrom.h  BlueSCSI_config.cpp  BlueSCSI_config.h  BlueSCSI_disk.cpp  BlueSCSI_disk.h  BlueSCSI_disk_as400.cpp  BlueSCSI_disk_as400.h  BlueSCSI_initiator.cpp  BlueSCSI_initiator.h  BlueSCSI_log.cpp  BlueSCSI_log.h  BlueSCSI_log_trace.cpp  BlueSCSI_log_trace.h  BlueSCSI_main.cpp  BlueSCSI_main.h  BlueSCSI_mode.cpp  BlueSCSI_mode.h  BlueSCSI_msc.cpp  BlueSCSI_msc.h  BlueSCSI_msc_initiator.cpp  BlueSCSI_msc_initiator.h  (+63 more)
src_bridge/: .gitmodules  BlueSCSI_platform  CMakeLists.txt  LICENSE.md  README.md  deploy.sh  libminini-config.cmake  libsdfat-config.cmake
src_bridge/App-IRQs/: CMakeLists.txt  main.cpp  main.h
src_bridge/App-Scheduling/: CMakeLists.txt  main.cpp  main.h
src_bridge/App-Template/: CMakeLists.txt  main.c  main.h
src_bridge/App-Timers/: CMakeLists.txt  main.cpp  main.h
src_bridge/Common/: ht16k33.cpp  ht16k33.h  i2c_utils.cpp  i2c_utils.h  mcp9808.cpp  mcp9808.h  utils.cpp  utils.h
src_bridge/Config/: FreeRTOSConfig.h
src_bridge/include/: board_debug_probe_config.h  board_example_config.h  board_pico_config.h  usb_descriptor.h  usb_descriptor.h.old
src_bridge/rp2040.xcworkspace/: contents.xcworkspacedata
src_bridge/src/: CUEParser  FreeRTOSConfig.h  SCSI2SD  cdc_uart.c  cdc_uart.h  cmd_console_examples.cpp  cmd_console_task.cpp  cmd_console_task.h  command_line.cpp  command_line.h  freertos_cli_commands.cpp  freertos_cli_commands.h  freertos_error_cbs.c  led.c  led.h  main.c  main.cpp  msc_disk.c  probe.h  ringbuffer.cpp  ringbuffer.h  stdio_tinyusb_cdc.cpp  stdio_tinyusb_cdc.h  sw_dp_pio.c  tusb_config.h  usb_descriptors.c  usb_descriptors.cpp  usb_descriptors_test.cpp
src_bridge/src/usb/: configuration_descriptor.cpp  device_descriptor.cpp  endpoint_descriptor.cpp  interface_descriptor.cpp  msc_base_disk.cpp  msc_base_disk.h  msc_disk.cpp  msc_disk.h  msc_disk_cbs.cpp  msc_disk_commands.cpp  msc_example_disk.cpp  msc_example_disk.h  msc_ram_disk.cpp  msc_ram_disk.h  msc_scsi_disk.cpp  msc_scsi_disk.h  stdio_tinyusb_cdc.cpp  string_descriptor.cpp  usb_descriptor_cbs.cpp  usb_descriptors.cpp  usb_descriptors.h  usb_task.cpp  usb_task.h
src_bridge/test/: CMakeLists.txt  usb_configuration_descriptor_test.cpp  usb_endpoint_descriptor_test.cpp  usb_interface_descriptor_test.cpp
test/: README
utils/: analyze_crashlog.sh  check_stack_usage.py  compare_elf.py  convert_greenpak_hex.sh  create_bin_package_zip.sh  create_firmware_zip.sh  gdb_macros  make_dist.sh  random_tester.py  regen_tls_anchors.rb  rename_binaries.sh  rp2040_gdb_macros  run_gdb.sh  run_gdb_rp2040.sh  run_gdb_v1_0.sh  run_gdb_v1_1.sh  speed_tester.py  update-nix-pin.sh
(+2517 files in other folders)
